--- a/style/login.css
+++ b/style/login.css
@@ -1,7 +1,8 @@
 .wrapper {
     position: relative;
     width: 430px;
-    height: 500px;
+    height: auto;
+    min-height: 500px;
     background-color: var(--form-background);
     border-radius: 15px;
     padding: 120px 32px 64px;
@@ -54,10 +55,8 @@
 }
 
 .login-form {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
     width: 85%;
+    margin: 0 auto;
     transition: var(--transition-3s);
 }
 .input-box {
@@ -134,7 +133,7 @@
 @media only screen and (max-width: 564px) {
     .wrapper {
         width: 100%;
-        height: 100%;
+        min-height: 100vh;
         border-radius: 0;
         margin: 0;
         border: none;
